# FootballSimulator

./: CMakeLists.txt  README.md  main.cpp
reader/: CMakeLists.txt  cmake_install.cmake  reader.cpp  reader.h
reader/CMakeScripts/: ReRunCMake.make
reader/CSV_READER.xcodeproj/: project.pbxproj
simulator/: CMakeLists.txt  cmake_install.cmake  simulator.cpp  simulator.h
simulator/CMakeScripts/: ReRunCMake.make
simulator/Simulator.xcodeproj/: project.pbxproj
simulator/unit_tests/: simulator_tests.cpp
